# bifrost

./: Cargo.toml  Dockerfile  README.md  clippy.toml
.github/: FUNDING.yml
.github/workflows/: discord.yml  docker-publish.yml
crates/: README.md
crates/bifrost-api/: Cargo.toml
crates/bifrost-api/src/: backend.rs  client.rs  config.rs  error.rs  lib.rs  service.rs  websocket.rs
crates/hue/: Cargo.toml
crates/hue/src/: clamp.rs  colorspace.rs  colortemp.rs  date_format.rs  devicedb.rs  diff.rs  effect_duration.rs  error.rs  event.rs  flags.rs  gamma.rs  gradient.rs  hs.rs  legacy_api.rs  lib.rs  stream.rs  update.rs  version.rs  xy.rs
crates/hue/src/api/: behavior.rs  bridge_home.rs  button.rs  device.rs  entertainment.rs  entertainment_config.rs  grouped_light.rs  light.rs  mod.rs  resource.rs  room.rs  scene.rs  stream.rs  stubs.rs  update.rs  zigbee_device_discovery.rs
crates/hue/src/zigbee/: composite.rs  entertainment.rs  mod.rs  stream.rs  target.rs
crates/svc/: Cargo.toml
crates/svc/examples/: from_async_fn.rs  policy.rs  restart.rs  simple.rs
crates/svc/src/: error.rs  lib.rs  manager.rs  policy.rs  rpc.rs  runservice.rs  serviceid.rs  template.rs  traits.rs
crates/z2m/: Cargo.toml
crates/z2m/src/: api.rs  button.rs  convert.rs  error.rs  hexcolor.rs  lib.rs  request.rs  serde_util.rs  update.rs
crates/zcl/: Cargo.toml
crates/zcl/src/: attr.rs  error.rs  frame.rs  hue.rs  lib.rs
crates/zcl/src/cluster/: colorctrl.rs  commissioning.rs  effects.rs  groups.rs  hue_fc01.rs  hue_fc03.rs  levelctrl.rs  mod.rs  onoff.rs  scenes.rs  standard.rs
doc/: comparison-with-diyhue.md  config-reference.md  docker-compose-install.md  docker-image-install.md  hue-zigbee-clusters.md  hue-zigbee-format.md  implementation-status.md
examples/: convert-product-data.rs  ez-parse.rs  generate-server-cert.rs  hz-make.rs  hz-parse.rs  normalize-hue-get.rs  wscat.rs  wsinput.rs  wsparse.rs  z2mdump.rs
mitm/: hello.py  main.py  pyproject.toml
mitm/dumps/: behav.json  custom.json  post.json  put.json  resources.json
src/: config.rs  error.rs  lib.rs  main.rs  mdns.rs  resource.rs
src/backend/: mod.rs
src/backend/z2m/: backend_event.rs  bridge_event.rs  bridge_import.rs  button.rs  entertainment.rs  learn.rs  mod.rs  stream.rs  websocket.rs  zclcommand.rs
src/hue/: date_format.rs  legacy_api.rs  mod.rs  update.rs  version.rs
src/hue/api/: behavior.rs  device.rs  entertainment.rs  entertainment_config.rs  grouped_light.rs  light.rs  mod.rs  resource.rs  room.rs  scene.rs  stubs.rs  update.rs
src/hue/zigbee/: mod.rs
src/model/: clamp.rs  colorspace.rs  gamma.rs  hexcolor.rs  mod.rs  state.rs  throttle.rs  types.rs  upnp.rs
src/routes/: api.rs  auth.rs  eventstream.rs  extractor.rs  licenses.rs  mod.rs  updater.rs  upnp.rs
src/routes/bifrost/: backend.rs  mod.rs  service.rs  websocket.rs
src/routes/clip/: behavior_instance.rs  device.rs  entertainment.rs  entertainment_configuration.rs  generic.rs  grouped_light.rs  light.rs  mod.rs  room.rs  scene.rs  zigbee_device_discovery.rs
src/server/: appstate.rs  banner.rs  behavior_instance.rs  certificate.rs  entertainment.rs  http.rs  hueevents.rs  mdns.rs  mod.rs  scheduler.rs  ssdp.rs  updater.rs
src/server/behavior_instance/: hue_accessories.rs  mod.rs  service.rs  wakeup.rs
src/z2m/: api.rs  convert.rs  hexcolor.rs  mod.rs  request.rs  update.rs
utils/: analyze-idv1.py  attribute-bruteforce.py  capture-event-stream.sh  extract-error-sample.py  filter-zigbee.jq  live-zigbee.sh  pcap-extract-zigbee.sh
