[package]
name = "hue"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
bitflags = "2.8.0"
byteorder = "1.5.0"
packed_struct = "0.10.1"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
uuid = "1.13.1"

[dev-dependencies]
hex = "0.4.3"
