[package]
name = "hue"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
bitflags = "2.8.0"
byteorder = "1.5.0"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std"] }
hex = "0.4.3"
iana-time-zone = "0.1.61"
mac_address = { version = "1.1.8", features = ["serde"] }
packed_struct = "0.10.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.11"
uuid = { version = "1.13.1", features = ["serde", "v5"] }

[dev-dependencies]
hex = "0.4.3"
