[package]
name = "svc"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
async-trait = "0.1.86"
log = "0.4.26"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time", "tokio-macros"] }
uuid = { version = "1.14.0", features = ["v4"] }

[lints]
workspace = true

[dev-dependencies]
pretty_env_logger = "0.5.0"
