[package]
name = "z2m"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
hue = { version = "0.1.0", path = "../hue" }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
