[package]
name = "zcl"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
byteorder = "1.5.0"
hex = "0.4.3"
hue = { version = "0.1.0", path = "../hue" }
packed_struct = "0.10.1"
thiserror = "2.0.11"
